implemented dynamic message scheduler. Implemented updateTime
